# bitcask

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
srv/: Cargo.toml
srv/src/: main.rs
srv/src/store/: arc.rs  error.rs  format.rs  keydir.rs  lockfile.rs  logfile.rs  mod.rs  storage.rs
srv/src/utils/: mod.rs  path.rs  server.rs  threadpool.rs
